# NDK

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Test.cpp  Test.h  com_example_ndk_JniClient.cpp  native-lib.cpp
app/src/main/cpp/one/: CMakeLists.txt  one.cpp
app/src/main/cpp/two/: two.cpp
app/src/main/java/com/example/ndk/: Animal.java  Cat.java  ClassField.java  DynamicRegiste.java  JniClient.java  MainActivity.java  MyJavaClass.java
app/src/main/jni/: CMakeLists.txt  com_example_ndk_DynamicRegiste.cpp  com_example_ndk_JniClient.cpp
app/src/main/jni/two/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
